<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.MovieDetailActivity">
    <!-- android:fitsSystemWindow = "true" 表示整个布局展示是整个屏幕出去状态栏,标题栏和导航栏剩下的区域-->
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--
             app:expandedTitleMarginStart="10dp"
            设置扩张时候(还没有收缩时)title离屏幕左边的距离

             app:contentScrim="?attr/colorPrimary"
            设置当完全CollapsingToolbarLayout折叠(收缩)后的背景颜色
             -->
            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="48dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">
                <!--设置layout_scrollFlags保证CollapsingToolbarLayout能滚动-->
                <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
    
                <RelativeLayout
                    android:id="@+id/headLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="pin"
                    app:layout_collapseParallaxMultiplier="0.7">
                <!--layout_collapseParallaxMultiplier视差因子 0~1 -->
                    
                    <ImageView
                        android:id="@+id/ivMovie"
                        android:layout_width="120dp"
                        android:layout_height="145dp"
                        android:scaleType="centerInside"
                        tools:src="@color/colorAccent"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="?android:attr/actionBarSize"/>
                    <RelativeLayout
                        android:id="@+id/llContent"
                        android:layout_width="wrap_content"
                        android:layout_height="145dp"
                        android:orientation="vertical"
                        android:layout_toRightOf="@+id/ivMovie"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="?android:attr/actionBarSize">
                        <TextView
                            android:id="@+id/tvMovieName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/txt_movie_name"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:ellipsize="marquee"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:singleLine="true"
                            android:paddingRight="20dp"/>
                        <RatingBar
                            android:id="@+id/rbRating"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:stepSize="0.1"
                            tools:rating="4.7"
                            android:layout_below="@+id/tvMovieName"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:paddingRight="3dp" />
                        <TextView
                            android:id="@+id/tvRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/colorAccent"
                            android:layout_below="@+id/tvMovieName"
                            android:layout_toRightOf="@id/rbRating"
                            tools:text="@string/txt_movie_rating"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"/>
                        <TextView
                            android:id="@+id/tvStars"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_movie_stars"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:layout_below="@id/tvRating"/>
                        <TextView
                            android:id="@+id/tvYear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/txt_movie_year"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:layout_below="@id/tvStars"/>
                        <TextView
                            android:id="@+id/tvCountries"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/txt_movie_country"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:layout_below="@+id/tvYear"/>
                        <TextView
                            android:id="@+id/tvType"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_movie_type"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:layout_below="@+id/tvCountries"/>
                    </RelativeLayout>
                </RelativeLayout>
                
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolBar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="scroll|enterAlways|snap"/>
            </android.support.design.widget.CollapsingToolbarLayout>
            
            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray_light">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray_light">
                    <RelativeLayout
                        android:id="@+id/rlSummary"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:background="@color/white"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="10dp">
                        <TextView
                            android:id="@+id/txtSummary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_summary"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:layout_marginBottom="5dp"/>
                        <TextView
                            android:id="@+id/tvSummary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/txt_movie_summary"
                            android:textColor="@color/gray_dark"
                            android:textSize="14sp"
                            android:layout_below="@+id/txtSummary"
                            android:maxLines="4"
                            android:ellipsize="end"/>
                    </RelativeLayout>
                    
                    <RelativeLayout
                        android:id="@+id/rlFilmer"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/white"
                        android:paddingTop="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_below="@+id/rlSummary"
                        android:layout_marginTop="20dp">
                        <TextView
                            android:id="@+id/txtFilmer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_filmer"
                            android:textColor="@color/black"
                            android:textSize="18sp"/>
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp"
                            android:layout_below="@+id/txtFilmer" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/rlUrl"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:background="@color/white"
                        android:paddingTop="10dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:layout_below="@+id/rlFilmer"
                        android:layout_marginTop="20dp">
                        <TextView
                            android:id="@+id/txtUrl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_detail"
                            android:textColor="@color/black"
                            android:textSize="18sp"/>
                        <TextView
                            android:id="@+id/tvUrl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/txt_url"
                            android:textColor="@color/blue"
                            android:textSize="14sp"
                            android:layout_below="@+id/txtUrl"
                            android:layout_marginTop="10dp"
                            android:maxLines="2"
                            android:ellipsize="end"/>
                    </RelativeLayout>
                    
                </RelativeLayout>
                
            </android.support.v4.widget.NestedScrollView>
        </android.support.design.widget.AppBarLayout>
        

</android.support.design.widget.CoordinatorLayout>